applications/minio-tenant/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns01-issuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 5t
    external-dns.alpha.kubernetes.io/hostname: api.minio.monitoring.rye.ninja,console.minio.monitoring.rye.ninja
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  tls:
    - hosts:
        - api.minio.monitoring.rye.ninja
        - console.minio.monitoring.rye.ninja
      secretName: tenant-tls
  rules:
    - host: api.minio.monitoring.rye.ninja
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio
                port:
                  number: 80
    - host: console.minio.monitoring.rye.ninja
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio-console
                port:
                  number: 9090
